--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "proteasy"]
+	path = proteasy
+	url = https://github.com/martinry/proteasy
+	shallow = true
+	registered = true
